unix-piloto-mss-r01a-id-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'unix-piloto-mss-r01a-id-app'
spec:
  selector:
    matchLabels:
      app: unix-piloto-mss-r01a-id-app
  replicas: 3
  template:
    metadata:
      labels:
        app: unix-piloto-mss-r01a-id-app
    spec:
      containers:
        - name: container
          image: >-
            jobs.rtve.local:5000/unix-piloto-mss-r01a-id-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
