unix-piloto-mss-r01a-id-api.yml
apiVersion: v1
kind: Service
metadata:
  name: unix-piloto-mss-r01a-id-api
spec:
  selector:
    app: unix-piloto-mss-r01a-id-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
