unix-piloto-mss-r01a-id-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: unix-piloto-mss-r01a-id-route
  labels: {}
spec:
  to:
    kind: Service
    name: unix-piloto-mss-r01a-id-estaticos
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  host: unix-piloto-mss-r01a-id-myargocd.apps.k8spro.nextret.net
  path: /
  port:
    targetPort: 80
